[tool.poetry]
name = "ai"
version = "0.1.0"
description = "ai lab"
authors = ["tonoy30 <tonoy.sust@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.5"
seaborn = "^0.11.1"
matplotlib = "^3.3.3"
tensorflow = "^2.4.0"
nltk = "^3.5"
jupyterlab = "^3.0.4"
gensim = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
